<resources>
    <string name="app_name">SaludableApp</string>
    <string name="password_hint">Contraseña</string>
    <string name="btn_ingresar">ingresar</string>
    <string name="btn_register">Si no tiene usuario registrese aquí</string>
    <string name="user_hint">Usuario</string>
    <string name="login_subtitle">Identificarse:</string>
    <string name="login_title">Bienvenido</string>
    <string name="register_title">Registro</string>
    <string name="name_label">Nombre</string>
    <string name="surname_label">Apellido</string>
    <string name="document_label">DNI</string>
    <string name="gender_subtitle">Genero:</string>
    <string name="gender_f_option">Femenino</string>
    <string name="gender_m_option">Masculino</string>
    <string name="born_date_label">Fecha de Nacimiento</string>
    <string name="city_label">Localidad</string>
    <string name="treatment_subtitle">Tratamiento:</string>
    <string name="treatment1_label">Anorexia</string>
    <string name="treatment2_label">Bulimia</string>
    <string name="treatment3_label">Obesidad</string>
    <string name="cancel_btn_label">Cancelar</string>
    <string name="next_btn_label">Siguiente</string>
    <string name="subtitle_personal_info">Datos personales</string>
    <string name="treatment_tv_subtitle">, para finalizar selecciona el tratamiento a realizar:</string>
    <string name="back_btn_label">Atrás</string>
    <string name="finish_btn_label">Finalizar</string>
    <string name="password_repeat_hint">Repetir Contraseña</string>
    <string name="password_tip">Requisitos: la contraseña debe tener un largo mínimo de 5 caracteres y al menos un número</string>
    <string name="other_label">Otro</string>
    <string name="other_treatment_label">Ingrese tratamiento</string>
    <string name="exit_label">salir</string>
    <string name="breakfast_label">DESAYUNO</string>
    <string name="lunch_label">ALMUERZO</string>
    <string name="snack_label">MERIENDA</string>
    <string name="dinner_label">CENA</string>
    <string name="main_food_label">Comida principal</string>
    <string name="second_food_label">Comida secundaria</string>
    <string name="drink_label">Bebida</string>
    <string name="dessert_subtitle">¿Ha ingerido postre?</string>
    <string name="save_label">Guardar</string>
    <string name="yes_label">SI</string>
    <string name="no_label">NO</string>
    <string name="dessert_label">Postre</string>
    <string name="other_subtitle_label">¿Tenía tentación de ingerir otro alimento?</string>
    <string name="other_food_label">Alimento tentado a ingerir</string>
    <string name="hunger_subtitle_label">¿Se quedó con hambre?</string>
</resources>