<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_text"
    android:padding="7dp"
    tools:context=".TreatmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/treatment_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/green_back"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/treatment_tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment_tv_subtitle"
            android:textColor="@color/green_back"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/treatment_rg_treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/treatment_rb_anorex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/treatment1_label" />

            <RadioButton
                android:id="@+id/treatment_rb_bulimia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treatment2_label" />

            <RadioButton
                android:id="@+id/treatment_rb_obesidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treatment3_label" />

            <RadioButton
                android:id="@+id/treatment_rb_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_label" />

            <EditText
                android:id="@+id/treatment_et_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_back"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/other_treatment_label"
                android:inputType="textPersonName"
                android:textColor="@color/green_back" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/treatment_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:text="@string/back_btn_label" />

        <Button
            android:id="@+id/treatment_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/finish_btn_label" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>