<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_text"
    android:padding="7dp"
    tools:context=".CredentialsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/credentials_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/green_back"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/credentials_tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genere usuario y contraseña"
            android:textColor="@color/green_back"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/credentials_et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/credentials_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/credentials_et_pwd_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_repeat_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/credentials_tv_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/password_tip"
            android:textColor="@color/green_back"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/credentials_tv_security_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/credentials_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:text="@string/back_btn_label" />

        <Button
            android:id="@+id/credentials_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/next_btn_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>