<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_text"
    tools:context=".PreReportActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pre_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/green_back"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pre_tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Reporte del:"
            android:textAlignment="textStart"
            android:textColor="@color/green_back"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/pre_tv_descript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Selecciones la comida que desea registrar presionando el botón correspondiente. Las comida ya cargadas apareceran deshabilitadas."
            android:textColor="@color/green_back"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/pre_btn_breakfast"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="146dp"
        android:text="@string/breakfast_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/pre_btn_lunch"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        android:text="@string/lunch_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pre_btn_breakfast" />

    <Button
        android:id="@+id/pre_btn_snack"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        android:text="@string/snack_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pre_btn_lunch" />

    <Button
        android:id="@+id/pre_btn_dinner"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        android:text="@string/dinner_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pre_btn_snack" />

    <Button
        android:id="@+id/pre_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/exit_label"
        android:textColor="@color/green_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>